--- a/.github/workflows/deploy-to-ecs.yml
+++ b/.github/workflows/deploy-to-ecs.yml
@@ -15,18 +15,18 @@ jobs:
         uses: actions/checkout@v2
 
       # Step 2: Set up Node.js environment
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '22'
+      # - name: Set up Node.js
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: '22'
 
-      # Step 3: Install dependencies
-      - name: Install dependencies
-        run: npm install
+      # # Step 3: Install dependencies
+      # - name: Install dependencies
+      #   run: npm install
 
-      # Step 4: Run tests
-      - name: Run tests
-        run: npm test
+      # # Step 4: Run tests
+      # - name: Run tests
+      #   run: npm test
 
       # Step 5: Log in to Amazon ECR
       - name: Login to Amazon ECR
