--- a/.github/workflows/deploy-to-ecs.yml
+++ b/.github/workflows/deploy-to-ecs.yml
@@ -27,6 +27,14 @@ jobs:
       # # Step 4: Run tests
       # - name: Run tests
       #   run: npm test
+      
+      # Step 5: Configure AWS credentials (Add this step)
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ vars.AWS_REGION }}
 
       # Step 5: Log in to Amazon ECR
       - name: Login to Amazon ECR
